lagt till X-Clacks Terry Pratchett till header

--- a/src/pages/mqtt-servers.astro
+++ b/src/pages/mqtt-servers.astro
@@ -4,6 +4,7 @@ import { mqttServers } from '../config/mqtt-servers';
 ---
 
 <MainLayouts title="MQTT Servrar | LORA">
+  <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <div class="mb-10">
     <h1 class="text-4xl font-black text-yellow-400 mb-2">MQTT Servrar</h1>
     <p class="text-gray-500 italic">Övervakning av anslutningsstatus för alla konfigurerade MQTT-servrar.</p>
