--- a/src/pages/nodes.astro
+++ b/src/pages/nodes.astro
@@ -53,7 +53,7 @@ const nodes = [
 ---
 
 <MainLayouts title="Nod-översikt | LORA">
-  
+  <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <div class="mb-10">
     <h1 class="text-4xl font-black text-yellow-400 mb-2">Driftstatus</h1>
     <p class="text-gray-500 italic">Driftstatus för Meshtastic-nätverket.</p>
