--- a/src/pages/nodes.astro
+++ b/src/pages/nodes.astro
@@ -8,13 +8,13 @@ import mqtt from 'mqtt';
 // Testdata (Här kan du senare hämta data från ett API)
 const nodes = [
 { 
-    nodeHexId: "!9ea1bb30", // Detta ID hittar du i Meshtastic-appen (t.ex. !f4a2)
-    name: "Hka bb30", 
+    nodeHexId: "!6ec3d6cc", // Detta ID hittar du i Meshtastic-appen (t.ex. !f4a2)
+    name: "CRAX mobil", 
     powerType: "plug" 
   },
 { 
-    nodeHexId: "!6985a080", // Detta ID hittar du i Meshtastic-appen (t.ex. !f4a2)
-    name: "Hka a080", 
+    nodeHexId: "!e8cc2f45", // Detta ID hittar du i Meshtastic-appen (t.ex. !f4a2)
+    name: "RAF02", 
     powerType: "plug" 
   },
 { 
